--- a/html/build.gradle
+++ b/html/build.gradle
@@ -2,9 +2,9 @@ apply plugin: "java"
 apply plugin: "jetty"
 
 gwt {
-    gwtVersion='2.6.0' // Should match the gwt version used for building the gwt backend
-    maxHeapSize="1G" // Default 256m is not enough for gwt compiler. GWT is HUNGRY
-    minHeapSize="1G"
+    gwtVersion = '2.6.0' // Should match the gwt version used for building the gwt backend
+    maxHeapSize = "1G" // Default 256m is not enough for gwt compiler. GWT is HUNGRY
+    minHeapSize = "1G"
 
     src = files(file("src/")) // Needs to be in front of "modules" below.
     modules 'by.matveev.rorty.GdxDefinition'
@@ -21,14 +21,14 @@ gwt {
 task draftRun(type: JettyRunWar) {
     dependsOn draftWar
     dependsOn.remove('war')
-    webApp=draftWar.archivePath
-    daemon=true
+    webApp = draftWar.archivePath
+    daemon = true
 }
 
 task superDev(type: de.richsource.gradle.plugins.gwt.GwtSuperDev) {
     dependsOn draftRun
     doFirst {
-    	gwt.modules = gwt.devModules
+        gwt.modules = gwt.devModules
     }
 }
 
@@ -42,27 +42,31 @@ task dist(dependsOn: [clean, compileGwt]) {
         copy {
             from "webapp"
             into "build/dist"
-            }
+        }
         copy {
             from "war"
             into "build/dist"
+        }
+        copy {
+            from "build/dist"
+            into "../game"
         }
     }
 }
 
 draftWar {
-   from "war"
+    from "war"
 }
 
 task addSource << {
-	sourceSets.main.compileClasspath += files(project(':core').sourceSets.main.allJava.srcDirs)
+    sourceSets.main.compileClasspath += files(project(':core').sourceSets.main.allJava.srcDirs)
 }
 
 tasks.compileGwt.dependsOn(addSource)
 tasks.draftCompileGwt.dependsOn(addSource)
 
 sourceCompatibility = 1.7
-sourceSets.main.java.srcDirs = [ "src/" ]
+sourceSets.main.java.srcDirs = ["src/"]
 
 
 eclipse.project {
